--- a/co-study-room/views/index.ejs
+++ b/co-study-room/views/index.ejs
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title><%= title %>></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="./stylesheets/styles.min.css">
+</head>
+
+<body>
+    <header>
+        <%- include('./common/header') %> 
+    </header>
+
+    <!-- Start: Login Form -->
+    <div class="login-clean" style="padding: 40px;">
+        <form method="post" action="/login" style="padding: 20px;">
+            <h2 class="sr-only">Login Form</h2>
+            <div class="illustration">
+                <i class="icon ion-log-in" style="color: var(--blue);"></i>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="loginid" placeholder="Login ID">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+                <input class="btn btn-primary btn-block" type="submit" value="Log In" style="background: var(--blue);"></button>
+            </div>
+        </form>
+    </div>
+    <!-- End: Login Form -->
+
+    <footer>
+    <%- include('./common/footer') %>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
