--- a/co-study-room/views/signup.ejs
+++ b/co-study-room/views/signup.ejs
@@ -21,16 +21,24 @@
             <div class="illustration">
                 <i class="icon ion-person-add" style="color: var(--blue);"></i>
             </div>
+
+            <% if(message){ %>
+            <% for(var msg of message){ %>
+            <div class="error-message">
+                <p><%= msg.message %></p>
+            </div>
+            <% } %>
+            <% } %>
             
             <form class="form-group" method="post" action="/signup">
                 Login ID
-                <input class="form-control" type="text" name="loginid" style="margin: 0px 0px 20px;">
+                <input class="form-control" type="text" name="login_id" style="margin: 0px 0px 20px;">
                 Login Name
-                <input class="form-control" type="text" name="loginame" style="margin: 0px 0px 20px;">
+                <input class="form-control" type="text" name="user_name" style="margin: 0px 0px 20px;">
                 Password
                 <input class="form-control" type="password" name="password" style="margin: 0px 0px 20px;">
                 Password-Retype
-                <input class="form-control" type="password" name="password-retype" style="margin: 0px 0px 20px;" >
+                <input class="form-control" type="password" name="password_retype" style="margin: 0px 0px 20px;" >
                 <input class="btn btn-primary btn-block" type="submit" value="Sign Up" style="background: var(--blue);">
             </form>
         </form>
