room作成画面追加

--- a/co-study-room/views/top.ejs
+++ b/co-study-room/views/top.ejs
@@ -7,7 +7,7 @@
     <title>Login_</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="./stylesheets/styles.min.css?h=471ecc0a3f7995eef86ac52a9708a070">
+    <link rel="stylesheet" href="./stylesheets/styles.min.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
     <!-- Start: Login Form Clean -->
     <div class="container-fluid" style="margin: 12px 0px;padding: 3px 15px;">
-        <a href="./makeroom.html">学習部屋を作成する</a>
+        <a href="./room/register">学習部屋を作成する</a>
     </div>
     
     <div class="container-fluid" style="margin: 20px 0px;padding: 3px 15px;">
