--- a/co-study-room/views/index.ejs
+++ b/co-study-room/views/index.ejs
@@ -23,7 +23,7 @@
                 <i class="icon ion-log-in" style="color: var(--blue);"></i>
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="loginid" placeholder="Login ID">
+                <input class="form-control" type="text" name="login_id" placeholder="Login ID">
                 <input class="form-control" type="password" name="password" placeholder="Password">
                 <input class="btn btn-primary btn-block" type="submit" value="Log In" style="background: var(--blue);"></button>
             </div>
