--- a/co-study-room/views/common/header.ejs
+++ b/co-study-room/views/common/header.ejs
@@ -9,8 +9,8 @@
 
     <div class="collapse navbar-collapse" id="navcol-1">
       <ul class="nav navbar-nav mr-auto"></ul>
-      <span class="navbar-text actions"> 
-        <a class="btn btn-light action-button" role="button" href="/" style="margin: 0px 12px;">Log In</a>
+      <span class="navbar-text actions">
+        <a class="btn btn-light action-button" role="button" href="/top" style="margin: 0px 12px;">Log In</a>
         <a class="btn btn-light action-button" role="button" href="/signup">Sign Up</a>
       </span>
     </div>
