--- a/co-study-room/views/room-register.ejs
+++ b/co-study-room/views/room-register.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="../stylesheets/styles.min.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 
 <body>
@@ -26,20 +27,20 @@
             </div>
             <div class="container" style="margin-top: 30px;margin-bottom: 12px;padding-top: 30px;border-top-style: solid;">
                 <h5>ルーム名</h5>
-                <input type="text" name="room_name" style="width: 320px;">
+                <input type="text" name="room_name" value="<%= form.room_name %>" style="width: 320px;">
             </div>
             <div class="container" style="margin-top: 50px;margin-bottom: 12px;">
                 <h5>このルームの概要</h5>
-                <textarea name="room_sammary" style="width: 640px;"></textarea>
+                <textarea name="room_sammary" value="<%= form.room_sammary %>" style="width: 640px;"></textarea>
             </div>
             <div class="container" style="margin-top: 30px;margin-bottom: 12px;padding-top: 30px;border-top-style: solid;">
                 <h5>参考書のタイトル</h5>
-                <input type="text" name="book_title" style="width: 320px;">
+                <input type="text" name="book_title" value="<%= form.book_title %>" style="width: 320px;">
             </div>        
             <div class="container" style="margin-top: 50px;margin-bottom: 12px;">
                 <h5>学習期間</h5>
-                <p>開始日：<input type="date" name="start_date" style="margin-left: 10px;"></p>
-                <p>終了日：<input type="date" name="end_date" style="margin-left: 10px;"></p>
+                <p>開始日：<input type="date" name="start_date" value="<%= form.start_date %>"  style="margin-left: 10px;"></p>
+                <p>終了日：<input type="date" name="end_date" value="<%= form.end_date %>" v-model="end_date"  style="margin-left: 10px;"></p>
             </div>
 
             <div class="container" style="margin-top: 50px;margin-bottom: 12px;">
@@ -62,11 +63,9 @@
                         <!-- inputに入力した値に応じてtableのカラム数を変更する -->
                         <tbody>
                             <tr v-for="n of numarray">
-                                <div class="test">
-                                    <td>{{ n }}</td>
-                                    <td><input type="text" name="content"></td>
-                                    <td><input type="date" name="term_end_date" style="margin-left: 10px;"></td>
-                                </div>
+                                <td>{{ n }}</td>
+                                <td><input type="text" name="content"></td>
+                                <td><input type="date" name="term_end_date" style="margin-left: 10px;"></td>
                             </tr>
                         </tbody>
 
