--- a/co-study-room/views/top.ejs
+++ b/co-study-room/views/top.ejs
@@ -11,50 +11,81 @@
 </head>
 
 <body>
-    <header>
-        <%- include('./common/header') %>
-    </header>
+    <div id="app">
+        <header>
+            <%- include('./common/header') %>
+        </header>
 
-    <!-- Start: Login Form Clean -->
-    <div class="container-fluid" style="margin: 12px 0px;padding: 3px 15px;">
-        <a href="./room/register">学習部屋を作成する</a>
+        <!-- Start: Login Form Clean -->
+        <div class="container-fluid" style="margin: 12px 10px;padding: 3px 15px;">
+            <a href="./room/register">学習部屋を作成する</a>
+        </div>
+        
+        <div class="container-fluid" style="margin: 20px 10px;padding: 3px 15px;">
+            <strong>学習部屋一覧</strong>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>学習部屋の名前</th>
+                            <th style="width: 184px;">学習期間</th>
+                            <th>学習仲間</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% if(rooms){ %>
+                        <% for(var room of rooms){ %> 
+                        <% var startdate = `${room.Room.startdate.getFullYear()}-${room.Room.startdate.getMonth()+1}-${room.Room.startdate.getDate()}` %>
+                        <% var enddate = `${room.Room.enddate.getFullYear()}-${room.Room.enddate.getMonth()+1}-${room.Room.enddate.getDate()}` %>
+                        <tr>
+                            <td style="width:10%"><a href="./room.html"><button class="btn btn-primary" type="button">入室</button></a></td>
+                            <td style="width:30%; padding: 6px;"><%= room.Room.roomname %></td>
+                            <td style="width:20%; padding: 6px;"><%= startdate%> ~ <%= enddate%></td>
+                            <td style="width:30%; padding: 6px;">
+                                <% for(var username of room.users){ %>
+                                    <%= username %>,
+                                <% } %>  
+                                <span style="margin:20px"><button class="btn btn-primary" data-toggle="modal" data-target="#modal1" type="button">招待</button></span>
+                            </td>
+                            <td style="width:10%"><a href="./room.html"><button class="btn btn-primary" type="button">削除</button></a></td>
+                        </tr>
+                        <% } %>
+                        <% } %>
+                    </tbody>
+                </table>
+
+                <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="label1" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="label1">招待URL</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            {{ invitationUrl }}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">OK</button>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <footer>
+            <%- include('./common/footer') %>
+        </footer>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     </div>
-    
-    <div class="container-fluid" style="margin: 20px 0px;padding: 3px 15px;">
-        <strong>学習部屋一覧</strong>
-    </div>
-
-    <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>学習部屋の名前</th>
-                    <th style="width: 184px;">学習期間</th>
-                    <th>学習仲間</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% if(rooms){ %>
-                <% for(var room of rooms){ %> 
-                <tr>
-                    <td style="width: 82px;"><a href="./room.html"><button class="btn btn-primary" type="button">入室</button></a></td>
-                    <td style="padding: 18px 12px;"><%= room.Room.roomname %></td>
-                    <td><%= room.Room.startdate %> ~ <%= room.Room.enddate %></td>
-                    <td>吉川、坂本、丸、岡本</td>
-                </tr>
-                <% } %>
-                <% } %>
-            </tbody>
-        </table>
-    </div>
-
-    <footer>
-        <%- include('./common/footer') %>
-    </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
