--- a/co-study-room/views/top.ejs
+++ b/co-study-room/views/top.ejs
@@ -40,7 +40,7 @@
                         <% var startdate = `${room.Room.startdate.getFullYear()}-${room.Room.startdate.getMonth()+1}-${room.Room.startdate.getDate()}` %>
                         <% var enddate = `${room.Room.enddate.getFullYear()}-${room.Room.enddate.getMonth()+1}-${room.Room.enddate.getDate()}` %>
                         <tr>
-                            <td style="width:10%"><a href="./room.html"><button class="btn btn-primary" type="button">入室</button></a></td>
+                            <td style="width:10%"><a href="/room?id=<%= room.Room.id %> "><button class="btn btn-primary" type="button">入室</button></a></td>
                             <td style="width:30%; padding: 6px;"><%= room.Room.roomname %></td>
                             <td style="width:20%; padding: 6px;"><%= startdate%> ~ <%= enddate%></td>
                             <td style="width:30%; padding: 6px;">
