--- a/co-study-room/views/room-register.ejs
+++ b/co-study-room/views/room-register.ejs
@@ -14,7 +14,7 @@
 <body>
     <div id="app">
         <header>
-            <%- include('./common/header') %>
+            <%- include('./common/header_afterLogin') %>
         </header>
 
         <form action="/room/register" method="POST">
