--- a/co-study-room/views/room-modify.ejs
+++ b/co-study-room/views/room-modify.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <%- include('./common/header') %>
+        <%- include('./common/header_afterLogin') %>
     </header>
 
     <div class="container" style="margin-top: 30px;margin-bottom: 12px;">
