--- a/co-study-room/views/signup.ejs
+++ b/co-study-room/views/signup.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <%- include('./common/header') %> 
+        <%- include('./common/header_beforeLogin') %> 
     </header>
 
     <!-- Start: Login Form Clean -->
